# AFIAN-AI

./: .env.example  .gitignore  DATA_SETUP.md  Dockerfile  MOVING_AVERAGES_COMPLETE_GUIDE.md  ONE_CLICK_TRAINING.md  PREDICTION_VS_REACTION_ANALYSIS.md  README.md  RULE_VS_AI_ANALYSIS.md  SERVER_RUNNING.txt  ULTIMATE_SOLUTION.md  WEB_SERVER_GUIDE.md  docker-compose.yml  main.py  requirements.txt  simple_server.py  train_all.py
ai/features/orderflow/: order_flow_imbalance.py  volume_profile.py
ai/features/preprocessing/: fractional_differencing.py  wavelet_denoiser.py
ai/features/technical/: indicators.py
ai/inference/: onnx_inference.py
ai/inference/serving/: fastapi_server.py
ai/models/: __init__.py
ai/models/decision_transformer/: decision_transformer.py
ai/models/regime_detection/: contrastive_vae.py
ai/models/tft/: temporal_fusion_transformer.py
ai/training/: guardian_trainer.py  oracle_trainer.py  strategist_trainer.py
ai/training/optimizers/: lookahead.py  ranger.py
ai/training/pipelines/: decision_transformer_training.py  regime_detection_pipeline.py  tft_training_pipeline.py
backtesting/engine/: backtest_engine.py
backtesting/metrics/: performance.py
configs/: system_config.yaml
configs/dev/: system_config.yaml
core/data_collector/: Cargo.toml  Dockerfile
core/data_collector/src/: main.rs
core/order_executor/: Cargo.toml  Dockerfile
core/order_executor/src/: main.rs
core/risk_manager/: Cargo.toml  Dockerfile
core/risk_manager/src/: main.rs
docs/: AI_TRAINING_MASTER_GUIDE.md  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_TRAINING.md  SETUP_GUIDE.md  TEST_RESULTS.md  TFT_TRAINING_GUIDE.md
models/simple/: metrics.txt
monitoring/alerting/: discord_notifier.py  email_notifier.py  telegram_notifier.py
results/: ensemble_backtest_2024_20251207_024017.txt  training_report_20251206_182456.txt  training_results_20251206_182456.json  ultimate_v2_backtest_2024_20251207_025000.txt
scripts/: backtest_ensemble.py  backtest_ml.py  backtest_simple_ensemble.py  convert_to_onnx.py  download_binance_vision.py  download_historical_data.py  download_year_by_year.py  generate_features.py  generate_features_5min.sh  generate_features_batch.sh  generate_features_historical.py  generate_features_simple.py  generate_sample_data.py  preprocess_data.py  preprocess_historical.py  quick_demo.py  resample_to_5min.py  run_backtest_5min.py  run_backtest_simple.py  setup.sh  start.sh  stop.sh  train_full_model.py  train_incremental.py  train_lstm_simple.py  train_production_models.py  train_pure_ai.py  train_simple_model.py  train_tft_incremental.py  train_tft_simple.py  train_ultimate_v2.py
